Fix projects margins on mobile

--- a/_gulped-sass/_layout/_projects.scss
+++ b/_gulped-sass/_layout/_projects.scss
@@ -6,10 +6,18 @@
 	    flex-wrap: wrap;
 	-ms-flex-pack: distribute;
 	    justify-content: space-around;
-	margin: 40px;
+	margin: 2%;
 	text-align: center;
 }
 
+/* have to use media query below rather than % margins due to a bug in firefox */
+
 .project-grid-element {
 	margin: 25px;
+}
+
+@media screen and (max-width: 470px){
+	.project-grid-element {
+		margin: 10px;
+	}
 }
